# auto_file_sorter

./: Cargo.toml  README.md
src/: main.rs
wix/: main.wxs
