[package]
name = "afs"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/InterstelarDev/auto_file_sorter"
authors = ["InterstelarDev"]

[package.metadata.wix]
upgrade-guid = "97945772-B19F-4235-B29D-AFB55A479029"
path-guid = "9821F86B-979E-45C0-91C9-87AD78041DED"
license = false
eula = false

[dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
